# MLHL-01-python-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: build.yml
app/: runner.py  types.py
app/bot/: __init__.py
app/bot/conversations/: __init__.py  insert.py  predict.py  query.py
app/conversations/: __init__.py  insert.py  query.py
app/conversations/utils/: __init__.py
app/data/: db.csv
app/db/: __init__.py  sqlite.db  utils.py
