[tool.poetry]
name = "Telegram bot"
version = "0.1.0"
description = ""
authors = ["Sergey Pavlov <self@sergeypavlov.dev>"]

[tool.poetry.dependencies]
python = "~3.10"
python-telegram-bot = "13.7"

[tool.poetry.dev-dependencies]
jupyter = "1.0.0"
jupyterthemes = "0.20.0"
mypy = "0.910"
flake8 = "4.0.1"

[tool.poetry-exec-plugin.commands]
jupyter = "jupyter notebook --allow-root --no-browser --ip 0.0.0.0 --NotebookApp.token=''"

[tool.mypy]
disable_error_code = "index, operator"