[tool.poetry]
name = "Telegram bot"
version = "0.1.0"
description = ""
authors = ["Sergey Pavlov <self@sergeypavlov.dev>"]

[tool.poetry.dependencies]
python = "~3.9"
python-telegram-bot = "*"
pandas = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
jupyter = "*"
jupyterthemes = "*"
mypy = "*"
flake8 = "*"

[tool.poetry-exec-plugin.commands]
jupyter = "jupyter notebook --allow-root --no-browser --ip 0.0.0.0 --NotebookApp.token=''"

[tool.mypy]
disable_error_code = "index, operator"